@@ -26,12 +26,12 @@
         <dependency>
             <groupId>com.appdynamics.extensions</groupId>
             <artifactId>aws-cloudwatch-exts-commons</artifactId>
-            <version>2.2.5</version>
+            <version>2.2.8</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-api-gateway</artifactId>
-            <version>1.11.642</version>
+            <version>1.12.788</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -40,15 +40,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
-            <version>1.7.3</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.powermock</groupId>
-            <artifactId>powermock-module-junit4</artifactId>
-            <version>1.7.3</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -59,10 +59,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.14.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED 
+                        --add-opens java.base/java.lang=ALL-UNNAMED 
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED 
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED 
+                        --add-opens java.base/java.util.regex=ALL-UNNAMED 
+                        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED 
+                        --add-opens java.base/java.io=ALL-UNNAMED 
+                        --add-opens java.base/java.xml=ALL-UNNAMED 
+                        --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED 
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -133,7 +153,7 @@
                                     <fileset dir="${project.basedir}" includes="LICENSE.txt" />
                                 </copy>
                                 <copy todir="${target.dir}">
-                                    <fileset dir="${build.directory}" includes="${project.artifactId}.${project.packaging}" />
+                                    <fileset dir="${project.build.directory}" includes="${project.artifactId}.${project.packaging}" />
                                 </copy>
                                 <zip destfile="${target.dir}-${project.version}.zip">
                                     <zipfileset dir="${target.dir}" filemode="755" prefix="${target.name}/" />
